footer overal aangepast, favicon toegevoegd overal, linken oveal juist gezet(denk ik) en bestel bevestiging

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
-    <title>Index</title>
+    <link rel="icon" href="./images/favicon.png">
+    <title>Home</title>
 </head>
 <body>
     <div class="container-fluid fullpage m-0 p-0">
@@ -81,7 +82,8 @@
                            en weet dat je kinderen veilig zijn.</p>
                     </div>
                     <div>
-                        <button class="btn btn-info custom-button mt-4">Koop nu</button>
+                        <a href="./bestel.html"><button class="btn btn-info custom-button mt-4">Koop nu</button></a>
+                            
                     </div>
                 </div>
             </div>
@@ -100,7 +102,7 @@
                         <img class="position-absolute cloud1" src="./images/cloud1.png" alt="cloud1">
                         <img class="position-absolute cloud2" src="./images/cloud2.png" alt="cloud2">
                     <div class="button-c">  
-                        <button class="btn btn-info custom-button">Meer info</button>
+                        <a href="./product.html"><button class="btn btn-info custom-button">Meer info</button></a>
                     </div>
                 </div>
             </div>
@@ -127,11 +129,11 @@
                                 <li>Bel functie</li>
                             </ul></div>
                         <div>
-                            <button class="btn btn-info custom-button">Meer info</button>
+                            <a href="./product.html"><button class="btn btn-info custom-button">Meer info</button></a>
                         </div>
                         <div class="pt-5">
-                            <button class="btn btn-info custom-button">App Store</button>
-                            <button class="btn btn-info custom-button">Google Play</button>
+                            <a href="https://www.apple.com/benl/app-store/"><button class="btn btn-info custom-button">App Store</button></a>
+                            <a href="https://play.google.com/store/apps"><button class="btn btn-info custom-button">Google Play</button></a>
                         </div>
                     </div>
                 </div>
@@ -161,7 +163,7 @@
                     </div>
                 </div>
                 <div class="row row-overping-info pl-4 pt-5">
-                    <button class="btn btn-info custom-button">Meer info</button>
+                    <a href="./over_ons.html"><button class="btn btn-info custom-button">Meer info</button></a>
                 </div>
             </div>
         </main>
@@ -170,7 +172,7 @@
         </div>
         <!--FOOTER-->
         <footer class="row">
-            <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer py-md-5">
+            <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer py-3 py-md-5">
                 <div class="column1-footer-links d-flex flex-column">
                     <a class="pb-4" href="./index.html">Home</a>
                     <a class="pb-4" href="./product.html">Product</a>
@@ -183,16 +185,16 @@
                     <h2>PINGWING</h2>
                 </div>
                 <div class="pb-2">
-                    <a class="pr-2" href="">
+                    <a class="pr-2" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                         <ion-icon name="logo-youtube"></ion-icon>
                     </a>
-                    <a class="px-1" href="">
+                    <a class="px-1" href="www.linkedin.com/">
                         <ion-icon name="logo-linkedin"></ion-icon>
                     </a>
-                    <a class="px-1" href="">
+                    <a class="px-1" href="https://www.facebook.com">
                         <ion-icon name="logo-facebook"></ion-icon>
                     </a>
-                    <a class="pl-2" href="">
+                    <a class="pl-2" href="https://www.instagram.com">
                         <ion-icon name="logo-instagram"></ion-icon>
                     </a>
                 </div>
