--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <script defer src="./js/contact.js"></script>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
+    <link rel="icon" href="./images/favicon.png">
     <title>Contact</title>
 </head>
 <body>
@@ -105,43 +106,51 @@
                 </div>
             </div>
         </main>
-        <footer class="row p-md-5 pt-4">
-            <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer">
+        <footer class="row">
+            <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer py-3 py-md-5">
                 <div class="column1-footer-links d-flex flex-column">
-                    <a class="pb-2" href="./index.html">Home</a>
-                    <a class="pb-2" href="./product.html">Product</a>
-                    <a class="pb-2" href="./over_ons.html">Over ons</a>
+                    <a class="pb-4" href="./index.html">Home</a>
+                    <a class="pb-4" href="./product.html">Product</a>
+                    <a class="pb-4" href="./over_ons.html">Over ons</a>
                     <a href="./contact.html">Contact</a>
                 </div>
             </div>
-            <div class="col-md-4 d-flex flex-column align-items-center justify-content-center column2-footer">
+            <div class="col-md-4 d-flex flex-column align-items-center justify-content-between column2-footer py-3">
                 <div class="pb-2">
                     <h2>PINGWING</h2>
                 </div>
                 <div class="pb-2">
-                    <a href=""><ion-icon name="logo-youtube"></ion-icon></a>
-                    <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
-                    <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
-                    <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a class="pr-2" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                        <ion-icon name="logo-youtube"></ion-icon>
+                    </a>
+                    <a class="px-1" href="www.linkedin.com/">
+                        <ion-icon name="logo-linkedin"></ion-icon>
+                    </a>
+                    <a class="px-1" href="https://www.facebook.com">
+                        <ion-icon name="logo-facebook"></ion-icon>
+                    </a>
+                    <a class="pl-2" href="https://www.instagram.com">
+                        <ion-icon name="logo-instagram"></ion-icon>
+                    </a>
                 </div>
                 <div>
                     <p>2021 &copy; PINGWING</p>
                 </div>
             </div>
-            <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer py-4 py-md-0">
+            <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer py-md-5">
                 <div class="column3-footer-info">
-                    <div class="info">
+                    <div class="info pb-4">
                         <ion-icon name="call-outline"></ion-icon>
                         <p>+32 123 45 789</p>
                     </div>
-                    <div class="info pb-3">
+                    <div class="info pb-4">
                         <ion-icon name="mail-outline"></ion-icon>
                         <a href="mailto:test@test.com">Info@PingWing.be</a>
                     </div>
                     <div class="info">
                         <ion-icon name="location-outline"></ion-icon>
                         <p class="m-0">
-                            Kempische Steenweg  293<br>
+                            Kempische Steenweg 293<br>
                             3500 Hasselt
                         </p>
                     </div>
