--- a/logIn.html
+++ b/logIn.html
@@ -14,6 +14,7 @@
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
+    <link rel="icon" href="./images/favicon.png">
     <title>Login</title>
 </head>
 <body>
@@ -128,7 +129,7 @@
         </main>
         <!--FOOTER-->
         <footer class="row">
-            <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer py-md-5">
+            <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer py-3 py-md-5">
                 <div class="column1-footer-links d-flex flex-column">
                     <a class="pb-4" href="./index.html">Home</a>
                     <a class="pb-4" href="./product.html">Product</a>
@@ -141,16 +142,16 @@
                     <h2>PINGWING</h2>
                 </div>
                 <div class="pb-2">
-                    <a class="pr-2" href="">
+                    <a class="pr-2" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                         <ion-icon name="logo-youtube"></ion-icon>
                     </a>
-                    <a class="px-1" href="">
+                    <a class="px-1" href="www.linkedin.com/">
                         <ion-icon name="logo-linkedin"></ion-icon>
                     </a>
-                    <a class="px-1" href="">
+                    <a class="px-1" href="https://www.facebook.com">
                         <ion-icon name="logo-facebook"></ion-icon>
                     </a>
-                    <a class="pl-2" href="">
+                    <a class="pl-2" href="https://www.instagram.com">
                         <ion-icon name="logo-instagram"></ion-icon>
                     </a>
                 </div>
