--- a/logIn.html
+++ b/logIn.html
@@ -89,20 +89,20 @@
                     </div>
                     <form id="form-registreer" class="row registreer-input">
                         <div class="col-md-12 melding-registreer" role="alert">
-                            <p class="alert alert-danger">Gelieve de verplichte velden in te vullen! (*)</p>
+                            <p class="alert alert-danger">Gelieve de alle verplichte velden correct in te vullen! (*)</p>
                             <p class="alert alert-success">U bent succesvol geregistreerd!</p>
                         </div>
                         <div class="col-md-6 registreer-naam pt-4">
                             <label class="invalidtxt" for="exampleInputPassword1">Naam*</label>
-                            <input type="text" class="form-control" id="naamuser">
+                            <input type="text" class="form-control validation" id="naamuser">
                         </div>
                         <div class="col-md-6 registreer-email pt-4">
                             <label class="invalidtxt" for="exampleInputPassword1">Email*</label>
-                            <input type="text" class="form-control" id="mailuser">
+                            <input type="text" class="form-control validationmail" id="mailuser">
                         </div>
                         <div class="col-md-6 registreer-wachtwoord pt-4">
                             <label class="invalidtxt" for="exampleInputPassword1">Wachtwoord*</label>
-                            <input type="password" class="form-control" id="wachtwoorduser">
+                            <input type="password" class="form-control validation" id="wachtwoorduser">
                         </div>
                         <div class="col-md-6 registreer-telefoon pt-4">
                             <label for="exampleInputPassword1">Telefoon</label>
