--- a/contact.html
+++ b/contact.html
@@ -17,46 +17,45 @@
 </head>
 <body>
     <div class="container-fluid fullpage m-0 p-0">
-        <div class="container-fluid fullpage m-0 p-0">
-            <nav class="navbar navbar-expand-md navbar-light">
-                <a class="navbar-brand brand" href="./index.html">Pingwing</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="">
-                        <div class="hamburger">
-                            <div class="hamburgermenu"></div>
-                        </div>
-                    </span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <ul class="navbar-nav navigation-list">
-                        <li class="nav-item px-md-4 align-self-center">
-                            <a class="nav-link" href="./product.html">Product </a>
-                        </li>
-                        <li class="nav-item align-self-center">
-                            <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
-                        </li>
-                        <li class="nav-item align-self-center">
-                            <a class="nav-link px-md-4" href="./over_ons.html">Over ons<span class="sr-only"></span></a>
-                        </li>
-                        <li class="nav-item align-self-center">
-                            <a class="nav-link px-md-4" href="./contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item align-self-center">
-                            <a class="">|</a>
-                        </li>
-                        <li class="nav-item align-self-center">
-                            <a class="nav-link px-md-4" href="./winkelmandje.html">
-                                <ion-icon class="" name="bag-outline"></ion-icon>
-                            </a>
-                        </li>
-                        <li class="nav-item align-self-center">
-                            <a class="nav-link pr-md-4" id="naam" href="./login.html">
-                                <ion-icon class="" name="person-outline"></ion-icon>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+        <nav class="navbar navbar-expand-md navbar-light">
+            <a class="navbar-brand brand" href="./index.html">Pingwing</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="">
+                    <div class="hamburger">
+                        <div class="hamburgermenu"></div>
+                    </div>
+                </span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <ul class="navbar-nav navigation-list">
+                    <li class="nav-item px-md-4 align-self-center">
+                        <a class="nav-link" href="./product.html">Product </a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./over_ons.html">Over ons<span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="">|</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./winkelmandje.html">
+                            <ion-icon class="" name="bag-outline"></ion-icon>
+                        </a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link pr-md-4" id="naam" href="./login.html">
+                            <ion-icon class="" name="person-outline"></ion-icon>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <main class="container pt-5">
             <div class="row">
                 <div class="col-md-6 contact-form pb-md-5 mb-5">
@@ -66,25 +65,25 @@
                     <div class="row contact-form-input">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="exampleInputPassword1">Voornaam*</label>
+                                <label >Voornaam*</label>
                                 <input type="text" class="form-control validation-124" id="voornaam-contact">
                               </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="exampleInputPassword1">Achternaam*</label>
+                                <label >Achternaam*</label>
                                 <input type="text" class="form-control validation-124" id="achternaam-contact">
                               </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="exampleInputPassword1">E-mail*</label>
+                                <label>E-mail*</label>
                                 <input type="text" class="form-control" id="mail-contact">
                               </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="exampleFormControlTextarea1">Beschrijving*</label>
+                                <label >Beschrijving*</label>
                                 <textarea class="form-control validation-124" id="beschrijving-contact" rows="3"></textarea>
                               </div>
                         </div>
