--- a/index.html
+++ b/index.html
@@ -17,48 +17,47 @@
     <title>Home</title>
 </head>
 <body>
+    <!--NAVIGATIEBALK-->
     <div class="container-fluid fullpage m-0 p-0">
-        <!--NAVIGATIEBALK-->
-        <div class="container-fluid fullpage m-0 p-0">
-            <nav class="navbar navbar-expand-md navbar-light">
-                <a class="navbar-brand brand" href="./index.html">Pingwing</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="">
-                        <div class="hamburger">
-                            <div class="hamburgermenu"></div>
-                        </div>
-                    </span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <ul class="navbar-nav navigation-list">
-                        <li class="nav-item px-md-4 align-self-center">
-                            <a class="nav-link" href="./product.html">Product </a>
-                        </li>
-                        <li class="nav-item align-self-center">
-                            <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
-                        </li>
-                        <li class="nav-item align-self-center">
-                            <a class="nav-link px-md-4" href="./over_ons.html">Over ons<span class="sr-only"></span></a>
-                        </li>
-                        <li class="nav-item align-self-center">
-                            <a class="nav-link px-md-4" href="./contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item align-self-center">
-                            <a class="">|</a>
-                        </li>
-                        <li class="nav-item align-self-center">
-                            <a class="nav-link px-md-4" href="./winkelmandje.html">
-                                <ion-icon class="" name="bag-outline"></ion-icon>
-                            </a>
-                        </li>
-                        <li class="nav-item align-self-center">
-                            <a class="nav-link pr-md-4" id="naam" href="./login.html">
-                                <ion-icon class="" name="person-outline"></ion-icon>
-                            </a>
-                        </li>
-                    </ul>
+        <nav class="navbar navbar-expand-md navbar-light">
+            <a class="navbar-brand brand" href="./index.html">Pingwing</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <div class="">
+                    <div class="hamburger">
+                        <div class="hamburgermenu"></div>
+                    </div>
                 </div>
-            </nav>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <ul class="navbar-nav navigation-list">
+                    <li class="nav-item px-md-4 align-self-center">
+                        <a class="nav-link" href="./product.html">Product </a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./over_ons.html">Over ons<span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="">|</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./winkelmandje.html">
+                            <ion-icon class="" name="bag-outline"></ion-icon>
+                        </a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link pr-md-4" id="naam" href="./login.html">
+                            <ion-icon class="" name="person-outline"></ion-icon>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <!--MAIN-->
         <main class="container">
             <div class="row row-koop-nu">
@@ -82,8 +81,7 @@
                            en weet dat je kinderen veilig zijn.</p>
                     </div>
                     <div>
-                        <a href="./bestel.html"><button class="btn btn-info custom-button mt-4">Koop nu</button></a>
-                            
+                        <a href="./bestel.html" class="btn btn-info custom-button mt-4">Koop nu</a>
                     </div>
                 </div>
             </div>
@@ -102,14 +100,14 @@
                         <img class="position-absolute cloud1" src="./images/cloud1.png" alt="cloud1">
                         <img class="position-absolute cloud2" src="./images/cloud2.png" alt="cloud2">
                     <div class="button-c">  
-                        <a href="./product.html"><button class="btn btn-info custom-button">Meer info</button></a>
+                        <a href="./product.html" class="btn btn-info custom-button">Meer info</a>
                     </div>
                 </div>
             </div>
             <div class="row row-myping mb-5">
                 <div class="col-md-6 d-flex align-items-end row-myping-mockup order-md-0 order-1">
-                    <img class="img-fluid mockup1 pb-5 mb-5" src="./Images/mockup_1.png">
-                    <img class="img-fluid mockup2 pb-5 mb-5" src="./Images/mockup_2.png">
+                    <img class="img-fluid mockup1 pb-5 mb-5" src="./Images/mockup_1.png" alt="mockup1">
+                    <img class="img-fluid mockup2 pb-5 mb-5" src="./Images/mockup_2.png" alt="mockup2">
                 </div>
                 <div class="col-md-5 position-relative offset-sm-1 row-myping-info pb-5 ">
                     <div class="row-myping-info-box pb-5 mb-5">
@@ -129,11 +127,11 @@
                                 <li>Bel functie</li>
                             </ul></div>
                         <div>
-                            <a href="./product.html"><button class="btn btn-info custom-button">Meer info</button></a>
+                            <a href="./product.html" class="btn btn-info custom-button">Meer info</a>
                         </div>
                         <div class="pt-5">
-                            <a href="https://www.apple.com/benl/app-store/"><button class="btn btn-info custom-button">App Store</button></a>
-                            <a href="https://play.google.com/store/apps"><button class="btn btn-info custom-button">Google Play</button></a>
+                            <a href="https://www.apple.com/benl/app-store/" class="pr-4"><img src="./images/apple.png" alt=""></a>
+                            <a href="https://play.google.com/store/apps"><img src="./images/andriod.png" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -163,12 +161,12 @@
                     </div>
                 </div>
                 <div class="row row-overping-info pl-4 pt-5">
-                    <a href="./over_ons.html"><button class="btn btn-info custom-button">Meer info</button></a>
+                    <a href="./over_ons.html" class="btn btn-info custom-button">Meer info</a>
                 </div>
             </div>
         </main>
         <div class="footer-image">
-            <img class="img img-fluid w-100" src="./images/Group 564.png" alt="">
+            <img class="img img-fluid w-100" src="./images/Group_564.png" alt="footer image">
         </div>
         <!--FOOTER-->
         <footer class="row">
