--- a/over_ons.html
+++ b/over_ons.html
@@ -75,7 +75,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
-                    <img src="./images/RikHoofd.png">
+                    <img src="./images/RikHoofd.png" alt="Rik">
                   </div>
                 <div class="col-md-6 py-md-5 pb-5 column-content">
                     <h1 class="text-md-left text-center">Rik</h1>
@@ -93,12 +93,12 @@
                     </p>
                 </div>
                 <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-end justify-content-center column-picture">
-                    <img src="./images/KaiHoofd.png">
+                    <img src="./images/KaiHoofd.png" alt="Kai">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
-                    <img src="./images/ThymenHoofd.png">
+                    <img src="./images/ThymenHoofd.png" alt="Thymen">
                 </div>
                 <div class="col-md-6 py-md-5 pb-5 column-content">
                     <h1 class="text-md-left text-center">Thymen</h1>
@@ -115,12 +115,12 @@
                     </p>
                 </div>
                 <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-end justify-content-center column-picture">
-                    <img src="./images/DriesHoofd.png">
+                    <img src="./images/DriesHoofd.png" alt="Dries">
                 </div>
             </div>
             <div class="row pb-5">
                 <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
-                    <img src="./images/ArishaHoofd.png">
+                    <img src="./images/ArishaHoofd.png" alt="Arisha">
                 </div>
                 <div class="col-md-6 py-md-5 pb-5 column-content">
                     <h1 class="text-md-left text-center">Arisha</h1>
