--- a/bestel.html
+++ b/bestel.html
@@ -63,7 +63,7 @@
             <main class="main container pt-5">
                 <div class="row">
                     <div class="col-md-7 bestel-foto d-flex justify-content-center align-items-center">
-                        <img class="main-container-col1-img" id="imgbandje" src="./images/BandRoodPingGroen.png">
+                        <img class="main-container-col1-img" id="imgbandje" src="./images/BandRoodPingGroen.png" alt="Rode Band">
                     </div>
                     <div class="col-md-5 pb-5 pb-md-0 bestel-info">
                         <p>Prijs</p>
@@ -72,7 +72,7 @@
                         <span class="dot-y" id="dotgeel" value="0"></span>
                         <span class="dot-b" id="dotblauw" value="0"></span>
                         <hr>
-                        <img class="main-container-col2-truck"src="./images/Truck.png">
+                        <img class="main-container-col2-truck"src="./images/Truck.png" alt="Bestelwagen Symbool">
                         <p>Standaard levering</p>
                         <p>2-3 werkdagen</p>
                         <p class="main-container-col2-gratis">Gratis</p>
@@ -153,7 +153,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header justify-content-between align-items-center ">
-          <img src="./Images/checkmark.png">
+          <img src="./Images/checkmark.png" alt="Checkmark">
           <h5 class="modal-title pl-4" id="exampleModalLabel">Het artikel is toegevoegd aan je winkelmandje</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
